# SAFRS

./: LICENSE  README.md  pi_pc_plc_stm.py
MAIN Raspberry Pi/project_hybrid_cluster/: README.md
Motor_Control Raspberry Pi/motor_client/: motor_command_sub.py  motor_odom_pub.py  motor_serial_bridge.py
mechanical/: README.md
mechanical/export/: safrs_agv_assembly.iam
mechanical/export/01_parts/: base_front.ipt  base_rear.ipt  battery_base.ipt  battery_base_mir.ipt  battery_pack_1_mir.ipt  battery_pack_2.ipt  bevel_gear_22t.ipt  carrier_v2.ipt  fixer_v1.ipt  key_v2.ipt  motor_clamp.ipt  pitch_axis.ipt  pitch_motor_v1.ipt  rotation_stopper.ipt  screw_v1.ipt  spur_gear_12t.ipt  spur_gear_13t.ipt  stopper.ipt  subassembly.txt  thrust_bearing_v1.ipt
mechanical/export/02_subassemblies/: battery_pack.iam  dc_converter.iam  roll_support_front_v2.iam  roll_support_rear_v1.iam  yaw_motor_mount.iam
mechanical/export/05_old_versions/: safrs_agv_assembly.ipj.bak  safrs_agv_assembly.ipj.old.bak
mechanical/export/07_workspaces/workspaces/: safrs_agv_assembly.iam
mechanical/export/07_workspaces/workspaces/01_parts/: Wire_aisle_v1.ipt  arduino_mega2560_step.ipt  base.ipt  battery_pack_1.ipt  bevel_gear_12t.ipt  connector.ipt  convertor_base.ipt  custom_bearing.ipt  dc_converter.ipt  fixer_right_v1.ipt  gear_support.ipt  jgb37_520_motor_12v_319rpm.ipt  pin.ipt  (+14 more)
mechanical/inventor/01_parts/: battery_pack_2_mir.ipt  fixer_left_v1.ipt  l298n_base.ipt  l298n_driver.ipt  lower_plate.ipt  motor_connector.ipt  pitch_axis_opposite.ipt  pitch_motor.ipt  pitch_support.ipt  short_screw.ipt  solid_6.ipt  spur_gear_22t_opposite.ipt  stm32_board.ipt  ydlidar_x4_pro.ipt
mechanical/inventor/02_subassemblies/: battery_pack_mir.iam  fixer_assembly.iam  l298n_motor_driver.iam  lidar_base.iam
pc-plc/: pi_pc_plc_stm.py
plc_pc_interface/: README.md
plc_pc_interface/config/: connection.yaml  protocol.yaml
plc_pc_interface/plc/: plc_pc_gateway.xgwx
plc_pc_interface/src/: gateway.py
raspberry_pi_cluster_tcp/: README.md
raspberry_pi_cluster_tcp/camera_raspberry_pi/: README.md  camera_pi.service  start_camera_pi.sh
raspberry_pi_cluster_tcp/camera_raspberry_pi/camera_pi/: package.xml  setup.cfg  setup.py
raspberry_pi_cluster_tcp/camera_raspberry_pi/camera_pi/config/: camera_params.yaml  inference_params.yaml  zmq_params.yaml
raspberry_pi_cluster_tcp/camera_raspberry_pi/camera_pi/model/: mobilenetv2_int8_v2.tflite
raspberry_pi_cluster_tcp/camera_raspberry_pi/camera_pi/src/camera_pi/: camera_node.py  color_class_node.py
raspberry_pi_cluster_tcp/lidar_raspberry_pi/: README.md  lidar.service  start_lidar.sh
raspberry_pi_cluster_tcp/lidar_raspberry_pi/cartographer_mapping/: package.xml  setup.cfg  setup.py
raspberry_pi_cluster_tcp/lidar_raspberry_pi/cartographer_mapping/config/: cartographer.lua  cartographer_params.yaml
raspberry_pi_cluster_tcp/lidar_raspberry_pi/cartographer_mapping/launch/: mapping.launch.py
raspberry_pi_cluster_tcp/lidar_raspberry_pi/lidar_driver/: package.xml  setup.cfg  setup.py
raspberry_pi_cluster_tcp/lidar_raspberry_pi/lidar_driver/config/: lidar_params.yaml
raspberry_pi_cluster_tcp/lidar_raspberry_pi/lidar_driver/launch/: lidar.launch.py
raspberry_pi_cluster_tcp/lidar_raspberry_pi/lidar_driver/src/lidar_driver/: lidar_node.py
raspberry_pi_cluster_tcp/main_raspberry_pi/: README.md
raspberry_pi_cluster_tcp/main_raspberry_pi/main_pi/: CMakeLists.txt  package.xml
raspberry_pi_cluster_tcp/main_raspberry_pi/main_pi/config/: nav2_params.yaml  zmq_params.yaml
raspberry_pi_cluster_tcp/main_raspberry_pi/main_pi/launch/: main_pi.launch.py  navigation.launch.py  rviz_view.launch.py  zmq_bridge.launch.py
raspberry_pi_cluster_tcp/main_raspberry_pi/main_pi/scripts/utils/: image_utils.py  math_utils.py  param_utils.py  zmq_utils.py
raspberry_pi_cluster_tcp/main_raspberry_pi/main_pi/scripts/zmq/: camera_zmq_sub.py  lidar_zmq_sub.py  motor_zmq_pub.py  odom_zmq_sub.py
raspberry_pi_cluster_tcp/motor_raspberry_pi/: README.md  motor_pi.service  start_motor_client.sh
raspberry_pi_cluster_tcp/motor_raspberry_pi/motor_pi/: package.xml  setup.cfg  setup.py
raspberry_pi_cluster_tcp/motor_raspberry_pi/motor_pi/arduino/: motor_controller.ino  tb6612_motor.cpp  tb6612_motor.h
raspberry_pi_cluster_tcp/motor_raspberry_pi/motor_pi/config/: odom_params.yaml  serial_params.yaml  zmq_params.yaml
raspberry_pi_cluster_tcp/motor_raspberry_pi/motor_pi/src/motor_pi/: motor_cmd_node.py  motor_odom_node.py  motor_serial_node.py
raspberry_pi_cluster_udp/camera_raspberry_pi/camera_pi/: README.md  package.xml  setup.py
raspberry_pi_cluster_udp/camera_raspberry_pi/camera_pi/config/: camera_params.yaml  inference_params.yaml  udp_params.yaml
raspberry_pi_cluster_udp/camera_raspberry_pi/camera_pi/launch/: camera_udp.launch.py
raspberry_pi_cluster_udp/camera_raspberry_pi/camera_pi/model/: mobilenetv2_ally_enemy_int8.tflite
raspberry_pi_cluster_udp/camera_raspberry_pi/camera_pi/src/camera_pi/: camera_udp_client.py
raspberry_pi_cluster_udp/lidar_raspberry_pi/lidar_pi/: package.xml  setup.cfg  setup.py
raspberry_pi_cluster_udp/main_raspberry_pi/: README.md
raspberry_pi_cluster_udp/main_raspberry_pi/main_pi/: package.xml  setup.cfg  setup.py
raspberry_pi_cluster_udp/main_raspberry_pi/main_pi/launch/: main_bridge.launch.py
raspberry_pi_cluster_udp/main_raspberry_pi/main_pi/src/main_pi/: main_bridge_node.py
raspberry_pi_cluster_udp/motor_raspberry_pi/: README.md
raspberry_pi_cluster_udp/motor_raspberry_pi/motor_pi/: package.xml  setup.cfg  setup.py
raspberry_pi_cluster_udp/motor_raspberry_pi/motor_pi/config/: odom_params.yaml  serial_params.yaml
raspberry_pi_cluster_udp/motor_raspberry_pi/motor_pi/launch/: stm_controller.launch.py
raspberry_pi_cluster_udp/motor_raspberry_pi/motor_pi/src/motor_pi/: stm_controller_node.py
udp_connection/: README.md
udp_connection/udp_to_drive/: package.xml  setup.py  udp_to_drive.service
udp_connection/udp_to_drive/launch/: udp_bridge.launch.py
udp_connection/udp_to_drive/udp_to_drive/: config.yaml  udp_bridge.py
(+6 files in other folders)
