<?xml version="1.0"?>
<package format="3">
  <name>udp_to_drive</name>
  <version>0.1.0</version>
  <description>SAFRS - UDP → ROS2 bridge module for AGV remote start trigger.</description>

  <!-- Maintainer -->
  <maintainer email="example@example.com">SAFRS</maintainer>
  <license>MIT</license>

  <!-- Build System -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <!-- Lint/Test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
