<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>camera_pi</name>
  <version>0.1.0</version>
  <description>Camera Pi module of the SAFRS Hybrid Cluster (pose, color classification, ally/enemy detection).</description>

  <maintainer email="example@example.com">SAFRS</maintainer>
  <license>MIT</license>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Python3 & ROS2 build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
