<?xml version="1.0"?>
<package format="3">
  <name>cartographer_mapping</name>
  <version>0.1.0</version>
  <description>Cartographer SLAM for SAFRS LiDAR Pi</description>

  <maintainer email="example@example.com">SAFRS</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>

  <!-- Cartographer -->
  <depend>cartographer_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
