<?xml version="1.0"?>
<package format="3">
  <name>lidar_driver</name>
  <version>0.1.0</version>
  <description>SAFRS LiDAR driver package for YDLIDAR X4 / X4 Pro.</description>

  <maintainer email="example@example.com">SAFRS</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- External Python libraries -->
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-zmq</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
