<?xml version="1.0"?>
<package format="3">

  <!-- ============================================================ -->
  <!-- 1. Package Metadata -->
  <!-- ============================================================ -->
  <name>main_pi</name>
  <version>0.1.0</version>
  <description>SAFRS Main Pi package for Navigation, ZMQ bridge, and central control.</description>

  <maintainer email="example@example.com">SAFRS</maintainer>
  <license>MIT</license>

  <!-- ============================================================ -->
  <!-- 2. Build Tools -->
  <!-- ============================================================ -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ============================================================ -->
  <!-- 3. Build Dependencies -->
  <!-- ============================================================ -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>tf2_ros</build_depend>

  <!-- ============================================================ -->
  <!-- 4. Runtime Dependencies -->
  <!-- ============================================================ -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Python Runtime -->
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-zmq</exec_depend>

  <!-- Launch -->
  <exec_depend>ros2launch</exec_depend>

  <!-- ============================================================ -->
  <!-- 5. Export -->
  <!-- ============================================================ -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
