<?xml version="1.0"?>
<package format="3">
  <name>motor_pi</name>
  <version>0.1.0</version>
  <description>
    SAFRS Motor Raspberry Pi package for motor control, serial bridge,
    ZeroMQ interface, and encoder-based odometry computation.
  </description>

  <maintainer email="example@example.com">SAFRS</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- External libs -->
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
