<?xml version="1.0"?>
<package format="3">
  <name>camera_pi</name>
  <version>0.1.0</version>
  <description>SAFRS Camera Raspberry Pi — UDP-based camera + inference client</description>

  <maintainer email="ubuntu@example.com">ubuntu</maintainer>
  <license>MIT</license>

  <!-- ---------------------------- -->
  <!-- Dependencies                 -->
  <!-- ---------------------------- -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Optional -->
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>

  <!-- Export build type -->
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
