<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <!-- ===================================================== -->
  <!-- Package Information                                  -->
  <!-- ===================================================== -->
  <name>main_pi</name>
  <version>0.1.0</version>

  <description>
    SAFRS Main Raspberry Pi (D-Pi).
    Central bridge node responsible for mode broadcast and
    cmd_vel command relaying across the cluster.
  </description>

  <maintainer email="ubuntu@example.com">SAFRS</maintainer>
  <license>MIT</license>

  <!-- ===================================================== -->
  <!-- Runtime Dependencies                                 -->
  <!-- ===================================================== -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- ===================================================== -->
  <!-- Test Dependencies                                    -->
  <!-- ===================================================== -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- ===================================================== -->
  <!-- Build System                                         -->
  <!-- ===================================================== -->
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
